# my-react-sets

./: .gitignore
api/: index.py  main.py  pyproject.toml  requirements.txt
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: FestivalList.jsx  FestivalList.module.css  FestivalMap.jsx  FestivalMap.module.css  Home.jsx  Home_backup.jsx  Navigation.jsx  TodoList.jsx  UpDown.jsx  UserInfoModal.jsx  UserInfoModal.module.css
