[project]
name = "intel-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "async-lru>=2.1.0",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "slowapi>=0.1.9",
    "uvicorn>=0.41.0",
]
